--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,5 @@
-* , *::before, *::after{
+* {
 box-sizing: border-box;
-padding: 0%;
-margin: 0;
-outline: 0;
 font-family: 'Roboto', sans-serif;
 }
 
@@ -47,3 +44,92 @@ border-bottom: 2px solid;
 
 /* --------------------------------------------------Header------------------------------------------------------------------*/
 
+ .slideshow-container {
+    max-width:100%;
+    height: 100 vh;
+    position: relative;
+    margin: auto;
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+    width: 100%;
+    height: 100vh;
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Caption text */
+  .slideshow-text {
+    color: #f2f2f2;
+    font-size: 25px;
+    padding: 8px 12px;
+    position: absolute;
+    text-align: left;
+    margin: 250px 30px;
+  }
+  
+  
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 5px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 10s;
+    animation-name: fade;
+    animation-duration: 2s;
+  }
+  
+   @-webkit-keyframes fade {
+       
+    from {opacity: .05}
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .05}
+    to {opacity: 1}
+  } 
+
+  
