--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@ display: flex;
 flex-direction: row;
 justify-content: space-between;
 align-content: center;
-background-color: #3e93ee;
+background-color: #3d95f3;
 width: 100%;
 height: 60px;
 }
@@ -172,18 +172,28 @@ border-bottom: 2px solid;
 
   /* ------------------------------------------------------------Categorias-------------------------------------------------------------------- */
 
-  .categiries h2{
+  .categories h2{
     text-align: center;
-    font-size: 40px;
-    font-weight: normal
+    font-size: 60px;
+    font-weight: normal;
+    margin: 60px 0px;
   }
-  
+
+  .categories h3{
+    text-align: center;
+    font-weight: bolder;
+    font-size: 30px;
+  }
+
   /* Three columns side by side */
 .column {
   float: left;
-  width: 33.3%;
+  width: 30%;
   margin-bottom: 16px;
   padding: 0 8px;
+}
+.categories img{
+  height: 130px;
 }
 
 /* Display the columns below each other instead of side by side on small screens */
@@ -193,10 +203,22 @@ border-bottom: 2px solid;
     display: block;
   }
 }
+.row{
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 70px;
+  align-content: center;
+  justify-content: center
+}
 
 /* Add some shadows to create a card effect */
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 285px;
+  height: 300px;
 }
 
 /* Some left and right padding inside the container */
@@ -205,11 +227,11 @@ border-bottom: 2px solid;
 }
 
 /* Clear floats */
-.cards::after, .row::after {
+/* .cards::after, .row::after {
   content: "";
   clear: both;
   display: table;
-}
+} */
 
 .title {
   color: grey;
@@ -219,15 +241,16 @@ border-bottom: 2px solid;
   border: none;
   outline: 0;
   display: inline-block;
-  padding: 8px;
+  padding: 10px;
   color: white;
-  background-color: #000;
+  background-color:#3d95f3;
   text-align: center;
   cursor: pointer;
   width: 100%;
+  border-radius: 10px;
 }
 
 .button:hover {
-  background-color: #555;
+  background-color: #0057b4;
 }
 
