--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,16 +1,21 @@
 * {
 box-sizing: border-box;
 font-family: 'Roboto', sans-serif;
+margin: 0;
+padding: 0;
 }
 
 .navbar{
+position: fixed;
 display: flex;
 flex-direction: row;
 justify-content: space-between;
 align-content: center;
-background-color: #3d95f3;
+background-color: #0057b4;
 width: 100%;
-height: 60px;
+height: 70px;
+z-index: 1000;
+top: 0;
 }
 .image_navbar{
 display: flex;
@@ -19,7 +24,7 @@ align-items: center;
 }
 
 #logo{
-width: 90px;
+width: 105px;
 height: max-content;
 align-items: center;
 justify-items: center;
@@ -29,26 +34,75 @@ justify-items: center;
 display: flex;
 align-items: center;
 cursor:pointer;
+margin-right: 20px;
 }
 
 .menu_item{
 margin: 0px 10px;
 font-size: 20px;
 color: #ffff;
+text-decoration: none;
+padding: 16px;
 
 }
 
 .menu_item:hover{
-border-bottom: 2px solid;
+background-color: #002a58;
+}
+
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  width: 270px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 5px;
+  margin: 25px 5px;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd}
+.show {display:block;}
+
+.icon-dropdown{
+  display: inline;
+  margin: 4px;
+  font-size: 14px;
 }
 
 /* --------------------------------------------------Header------------------------------------------------------------------*/
 
  .slideshow-container {
     max-width:100%;
-    height: 100 vh;
     position: relative;
     margin: auto;
+    background-color: rgba(0,0,0,0.5);
+  }
+
+  .slideshow-container::before{
+    content: '';
+    background-color: rgba(0,0,0,.5);
+    z-index: 3;
+    display: block;
+    width: 100%;
+    height: 100vh;
+    left: 0;
+    right: 0;
+    position: absolute; 
   }
   
   /* Hide the images by default */
@@ -61,12 +115,19 @@ border-bottom: 2px solid;
   
   /* Caption text */
   .slideshow-text {
-    color: #f2f2f2;
+    color: white;
     font-size: 25px;
-    padding: 8px 12px;
+    padding: 20px 25px;
     position: absolute;
     text-align: left;
-    margin: 250px 30px;
+    bottom: 50px;
+    background-color: rgba(0,0,0,0.3);
+    height: 150px;
+    box-shadow: 3px 7px 56px -7px rgba(241,241,241,1);
+    margin: 0px 500px 0px 10px;
+    border-radius: 5px;
+    line-height: 35px;
+
   }
   
   
@@ -117,17 +178,18 @@ border-bottom: 2px solid;
     text-align: center;
   }
 
-  .description h1{
-    font-size: 40px;
+  .description h2{
+    font-size: 60px;
     font-weight: normal;
-    margin: 15px;
+    margin: 40px;
+    line-height: 35px;
    
   }
 
   .description p{
     color:#666;
     line-height: 1.52941;
-    margin-bottom: 40px;
+    margin-bottom: 70px;
   }
   /* ------------------------------------Bakgound Image---------------------------------------------------------------- */
 
@@ -222,7 +284,7 @@ border-bottom: 2px solid;
   display: inline-block;
   padding: 8px;
   color: white;
-  background-color:#3d95f3;
+  background-color: #0057b4;
   text-align: center;
   cursor: pointer;
   width: 240px;
@@ -232,7 +294,7 @@ border-bottom: 2px solid;
 }
 
 .button:hover {
-  background-color: #0057b4;
+  background-color: #002a58;
 }
 
 .card-h3{
@@ -246,26 +308,28 @@ border-bottom: 2px solid;
 
 /* ------------------------------------------------------Sction Contact----------------------------------------------- */
 .contact{
-  background-color: #F3F3F9 ;
+  background-color: #F3F3F9;
+  padding: 0px 150px;
+  height: 285px;
 }
 .contact h2{
   padding-top: 15px;
   text-align: center;
   font-size: 60px;
   font-weight: normal;
-  margin: 60px 0px;
+  margin: 25px 0px;
 }
 
 .contact-container{
   display: flex;
   flex-direction: row;
   align-content: center;
-  justify-content: center;
+  justify-content: space-between;
 
 }
 
 .contact-container-dates{
-  margin: 25px 55px 0px;
+  margin: 25px 55px 0px 0px;
 }
 
 .contact-container-dates .fab{
@@ -276,3 +340,23 @@ border-bottom: 2px solid;
   margin-right: 5px;
 }
 /* ---------------------------------------------------------Footer---------------------------------------------------------- */
+
+footer{
+  background-color: #0057b4;
+  width: 100%;
+  height: 100px;
+  color:#f1f1f1;
+  text-align: center;
+}
+
+footer h4{
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 20px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+footer p{
+  margin: 0px;
+}
