--- a/styles/form.css
+++ b/styles/form.css
@@ -1,6 +1,9 @@
-* {box-sizing: border-box}
-/* Full-width input fields */
-  input[type=text], input[type=password] {
+* {
+  box-sizing: border-box;
+}
+
+
+input[type=text], input[type=password] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -9,74 +12,81 @@
   background: #f1f1f1;
 }
 
-/* Add a background color when the inputs get focus */
+
 input[type=text]:focus, input[type=password]:focus {
   background-color: #ddd;
   outline: none;
 }
 
-/* Set a style for all buttons */
+
 button {
-  background-color: #04AA6D;
+  background-color: #0057b4;
   color: white;
   padding: 14px 20px;
-  margin: 8px 0;
+  margin: 8px 10px;
   border: none;
   cursor: pointer;
-  width: 100%;
+  width: 40%;
   opacity: 0.9;
+  border-radius: 5px;
+  font-size: 18px;
 }
 
 button:hover {
   opacity:1;
 }
 
-/* Extra styles for the cancel button */
+
 .cancelbtn {
   padding: 14px 20px;
-  background-color: #f44336;
+  background-color:#0057b4 ;
 }
 
-/* Float cancel and signup buttons and add an equal width */
+
 .cancelbtn, .signupbtn {
-  float: left;
-  width: 50%;
+  width: 40%;
+
 }
 
-/* Add padding to container elements */
-.container {
+
+.container-modal {
   padding: 16px;
 }
 
-/* The Modal (background) */
+.container-modal h1,p{
+  text-align: center;
+  line-height: 35px;
+
+}
+
+
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: #474e5d;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto;
+  background-color:rgba(0,0,0,0.8);
   padding-top: 50px;
 }
 
-/* Modal Content/Box */
+
 .modal-content {
   background-color: #fefefe;
-  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  margin: 5% auto 15% auto; 
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 80%;
 }
 
-/* Style the horizontal ruler */
+
 hr {
   border: 1px solid #f1f1f1;
   margin-bottom: 25px;
 }
 
-/* The Close Button (x) */
+
 .close {
   position: absolute;
   right: 35px;
@@ -88,18 +98,28 @@ hr {
 
 .close:hover,
 .close:focus {
-  color: #f44336;
   cursor: pointer;
 }
 
-/* Clear floats */
+
+.clearfix{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .clearfix::after {
   content: "";
   clear: both;
   display: table;
 }
+.dates-person{
+  border: 1px solid black;
+  padding: 12px;
+  margin: 12px 0px;
+}
 
-/* Change styles for cancel button and signup button on extra small screens */
+
 @media screen and (max-width: 300px) {
   .cancelbtn, .signupbtn {
     width: 100%;
