--- a/styles/categories.css
+++ b/styles/categories.css
@@ -22,6 +22,8 @@ padding: 0;
     width: 140px;
     height: 132px;
     margin: 20px 10px;
+    border: 1px solid black;
+
   }
   
   /* The "show" class is added to the filtered elements */
