--- a/styles/categories.css
+++ b/styles/categories.css
@@ -5,6 +5,86 @@ margin: 0;
 padding: 0;
 }
 
+.navbar{
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  background-color: #0057b4;
+  width: 100%;
+  height: 70px;
+  z-index: 1000;
+  top: 0;
+  }
+  .image_navbar{
+  display: flex;
+  align-items: center;
+  
+  }
+  
+  #logo{
+  width: 105px;
+  height: max-content;
+  align-items: center;
+  justify-items: center;
+  }
+  
+  .menu{
+  display: flex;
+  align-items: center;
+  cursor:pointer;
+  margin-right: 20px;
+  }
+  
+  .menu_item{
+  margin: 0px 10px;
+  font-size: 20px;
+  color: #ffff;
+  text-decoration: none;
+  padding: 16px;
+  
+  }
+  
+  .menu_item:hover{
+  background-color: #002a58;
+  }
+  
+  
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    width: 270px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 5px;
+    margin: 25px 5px;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #ddd}
+  .show {display:block;}
+  
+  .icon-dropdown{
+    display: inline;
+    margin: 4px;
+    font-size: 14px;
+  }
+  /* ------------------------------------ Categorias------------------------------------------------------------------------ */
+
 .container {
     overflow: hidden;
   }
@@ -60,9 +140,10 @@ padding: 0;
   }
 
   #myBtnContainer{
-    height: 300px;
+    height: 350px;
     background-color: #E9F3FD;
     text-align: center;
+    margin-top: 74px;
   }
 
   #myBtnContainer h2{
@@ -76,6 +157,7 @@ padding: 0;
     display: flex;
     justify-content: space-around;
     align-content: center;
+    margin-top: 20px;
   }
 
 
@@ -168,3 +250,58 @@ padding: 0;
     padding: 5px 25px;
     margin-right: 70px;
   }
+
+  /* ------------------------------------------------------Sction Contact----------------------------------------------- */
+.contact{
+  background-color: #F3F3F9;
+  padding: 0px 150px;
+  height: 285px;
+}
+.contact h2{
+  padding-top: 15px;
+  text-align: center;
+  font-size: 60px;
+  font-weight: normal;
+  margin: 25px 0px;
+}
+
+.contact-container{
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-between;
+
+}
+
+.contact-container-dates{
+  margin: 25px 55px 0px 0px;
+}
+
+.contact-container-dates .fab{
+  margin-right: 5px;
+}
+
+.contact-container-dates .fas{
+  margin-right: 5px;
+}
+/* ---------------------------------------------------------Footer---------------------------------------------------------- */
+
+footer{
+  background-color: #0057b4;
+  width: 100%;
+  height: 100px;
+  color:#f1f1f1;
+  text-align: center;
+}
+
+footer h4{
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 20px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+footer p{
+  margin: 0px;
+}
