--- a/templates/categories.html
+++ b/templates/categories.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/categories.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
     <title>Categorías</title>
 </head>
 <body>
@@ -112,11 +111,11 @@
         <h2>Contacto</h2>
         <div class="contact-container">
           <div class="contact-container-dates">
-            <p><i class="fas fa-phone"></i> 093627387</p>
+            <p style="margin-bottom:10px;"><i class="fas fa-phone"></i> 093627387</p>
             <p><i class="fas fa-envelope"></i>ongvirtual@gmail.com</span></p>
           </div>
           <div class="contact-container-dates">
-            <p><i class="fab fa-facebook-square"></i>Facebook</p>
+            <p style="margin-bottom:10px;"><i class="fab fa-facebook-square"></i>Facebook</p>
             <p><i class="fab fa-instagram-square"></i>Instagram</p>
           </div>
           <div><iframe
@@ -135,7 +134,7 @@
       </div>
     </footer>
   
-
+<script src="https://kit.fontawesome.com/b9132d8f3b.js" crossorigin="anonymous"></script>
 <script src="./js/categories.js"></script>
 </body>
 </html>
