--- a/styles/categories.css
+++ b/styles/categories.css
@@ -17,6 +17,7 @@ padding: 0;
   z-index: 1000;
   top: 0;
   }
+
   .image_navbar{
   display: flex;
   align-items: center;
@@ -24,10 +25,11 @@ padding: 0;
   }
   
   #logo{
-  width: 105px;
+  width: 80px;
   height: max-content;
   align-items: center;
   justify-items: center;
+  margin-left: 15px;
   }
   
   .menu{
@@ -251,7 +253,7 @@ padding: 0;
     margin-right: 70px;
   }
 
-  /* ------------------------------------------------------Sction Contact----------------------------------------------- */
+  /* ------------------------------------------------------Section Contact----------------------------------------------- */
 .contact{
   background-color: #F3F3F9;
   padding: 0px 150px;
