--- a/templates/index.html
+++ b/templates/index.html
@@ -199,11 +199,11 @@
       <h2>Contacto</h2>
       <div class="contact-container">
         <div class="contact-container-dates">
-          <p><i class="fas fa-phone"></i> 093627387</p>
+          <p style="margin-bottom:10px;"><i class="fas fa-phone"></i> 093627387</p>
           <p><i class="fas fa-envelope"></i>ongvirtual@gmail.com</span></p>
         </div>
         <div class="contact-container-dates">
-          <p><i class="fab fa-facebook-square"></i>Facebook</p>
+          <p style="margin-bottom:10px;"><i class="fab fa-facebook-square"></i>Facebook</p>
           <p><i class="fab fa-instagram-square"></i>Instagram</p>
         </div>
         <div><iframe
