--- a/web/templates/categories.html
+++ b/web/templates/categories.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/categories.css">
+    <link rel="stylesheet" href="/styles/categories.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   
     <title>Categorías</title>
@@ -13,7 +13,7 @@
 
    <nav>
     <div class="navbar">
-      <div class="image_navbar"><img id="logo" alt="logo" src="./img/image1.png"></div>
+      <div class="image_navbar"><img id="logo" alt="logo" src="../img/image1.png"></div>
       <div class="menu">
         <a href="#how" class="menu_item">Quiénes Somos</a>
         <div class="dropdown">
@@ -135,6 +135,6 @@
     </footer>
   
 <script src="https://kit.fontawesome.com/b9132d8f3b.js" crossorigin="anonymous"></script>
-<script src="./js/categories.js"></script>
+<script src="/js/categories.js"></script>
 </body>
 </html>
