--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -1,116 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/static/styles/form.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     {% block styles %}{% endblock %}
     <title>Document</title>
 
 </head>
+
 <body>
     <header>
         <nav>
             <div class="navbar">
-              <div class="image_navbar"><img id="logo" alt="logo" src="/static/img/image1.png"></div>
-              <div class="menu">
-                <a href="#how" class="menu_item">Quiénes Somos</a>
-                <div class="dropdown">
-                  <a  href="#cat" onmouseover="myFunctionDropdown()" class="dropbtn menu_item">Categorías <div class="icon-dropdown" ><i class="fas fa-chevron-down" ></div></i></a>
-                  <div id="myDropdown" class="dropdown-content">
-                    <a href="#">Familia</a>
-                    <a href="#">Violencia de Género</a>
-                    <a href="#">Adicciones</a>
-                    <a href="#">Personas en Situación de Calle</a>
-                    <a href="#">Ollas Populares</a>
-                    <a href="#">Refugios de Animales</a>
-                    <a href="#">Discriminación</a>
-                    <a href="#">Personas con Capacidades Diferentes</a>
-                  </div>
-                 
+                <div class="image_navbar"><img id="logo" alt="logo" src="/static/img/image1.png"></div>
+                <div class="menu">
+                    <a href="#how" class="menu_item">Quiénes Somos</a>
+                    <div class="dropdown">
+                        <a href="#cat" onmouseover="myFunctionDropdown()" class="dropbtn menu_item">Categorías <div
+                                class="icon-dropdown"><i class="fas fa-chevron-down"></div></i></a>
+                        <div id="myDropdown" class="dropdown-content">
+                            <a href="#">Familia</a>
+                            <a href="#">Violencia de Género</a>
+                            <a href="#">Adicciones</a>
+                            <a href="#">Personas en Situación de Calle</a>
+                            <a href="#">Ollas Populares</a>
+                            <a href="#">Refugios de Animales</a>
+                            <a href="#">Discriminación</a>
+                            <a href="#">Personas con Capacidades Diferentes</a>
+                        </div>
+
+                    </div>
+                    <a href="#cnt" class="menu_item">Contacto</a>
+                    <a class="menu_item" onclick="document.getElementById('id01').style.display='block'">Introduce tu
+                        ONG</a>
                 </div>
-                <a href="#cnt" class="menu_item">Contacto</a>
-                <a class="menu_item" onclick="document.getElementById('id01').style.display='block'" >Introduce tu ONG</a>
-            </div>
-          </nav>
-        </header>
-          <main>
-            {% block content %}{% endblock %}
-          </main>
-          <section id="cnt">
-            <div class="contact">
-              <h2>Contacto</h2>
-              <div class="contact-container">
+        </nav>
+    </header>
+    <main>
+        {% block content %}{% endblock %}
+    </main>
+    <section id="cnt">
+        <div class="contact">
+            <h2>Contacto</h2>
+            <div class="contact-container">
                 <div class="contact-container-dates">
-                  <p style="margin-bottom:10px;"><i class="fas fa-phone"></i> 093627387</p>
-                  <p><i class="fas fa-envelope"></i>ongvirtual@gmail.com</span></p>
+                    <p style="margin-bottom:10px;"><i class="fas fa-phone"></i> 093627387</p>
+                    <p><i class="fas fa-envelope"></i>ongvirtual@gmail.com</span></p>
                 </div>
                 <div class="contact-container-dates">
-                  <p style="margin-bottom:10px;"><i class="fab fa-facebook-square"></i>Facebook</p>
-                  <p><i class="fab fa-instagram-square"></i>Instagram</p>
+                    <p style="margin-bottom:10px;"><i class="fab fa-facebook-square"></i>Facebook</p>
+                    <p><i class="fab fa-instagram-square"></i>Instagram</p>
                 </div>
                 <div><iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3362.3005907171855!2d-56.191112782201124!3d-34.89429928598559!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f803a6f55c911%3A0xa9bfd540831d3a8d!2sANONG%20(Asociaci%C3%B3n%20Nacional%20de%20ONG%20Orientadas%20al%20Desarrollo)!5e0!3m2!1ses-419!2suy!4v1635949585937!5m2!1ses-419!2suy"
-                    width="420px" height="158pxpx"
-                    style=" box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);border-radius: 5px; margin:0px 20px 30px;"
-                    allowfullscreen="" loading="lazy"></iframe></div>
-              </div>
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3362.3005907171855!2d-56.191112782201124!3d-34.89429928598559!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f803a6f55c911%3A0xa9bfd540831d3a8d!2sANONG%20(Asociaci%C3%B3n%20Nacional%20de%20ONG%20Orientadas%20al%20Desarrollo)!5e0!3m2!1ses-419!2suy!4v1635949585937!5m2!1ses-419!2suy"
+                        width="420px" height="158pxpx"
+                        style=" box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);border-radius: 5px; margin:0px 20px 30px;"
+                        allowfullscreen="" loading="lazy"></iframe></div>
             </div>
-          </section>
-        
-          <footer>
-            <div>
-              <h4>“Hemos venido a este mundo como hermanos; caminemos, pues, dándonos la mano y uno delante de otro.” </h4>
-              <p>William Shakespeare</p>
-            </div>
-          </footer>
-        
-         
-            <div id="id01" class="modal">
-            <span onclick="document.getElementById('id01').style.display='none'" onclick="document.getElementById('id01').style.display='none'"  class="close" title="Close Modal">times;</span>
-            <form class="modal-content" action="/action_page.php">
-              <div class="container-modal">
+        </div>
+    </section>
+
+    <footer>
+        <div>
+            <h4>“Hemos venido a este mundo como hermanos; caminemos, pues, dándonos la mano y uno delante de otro.”
+            </h4>
+            <p>William Shakespeare</p>
+        </div>
+    </footer>
+
+
+    <div id="id01" class="modal">
+        <span onclick="document.getElementById('id01').style.display='none'"
+            onclick="document.getElementById('id01').style.display='none'" class="close"
+            title="Close Modal">times;</span>
+        <form class="modal-content" action="/action_page.php">
+            <div class="container-modal">
                 <h1>Datos a llenar de la ONG que desea ingresar </h1>
                 <p>Por favor debe ingresar estos datos par ingresar su ONG</p>
-                <hr>  
-                
+                <hr>
+
                 <label for="name-ong"><b>Nombre de la ONG</b></label>
                 <input type="text" placeholder="Nombre de la ONG" name="name-ong" required>
-        
+
                 <label for="contact-number"><b>Introduzca un número de contacto</b></label>
                 <input type="text" placeholder="Numero de contacto" name="contact-number" required>
-        
+
                 <label for="email"><b>Correo Electrónico</b></label>
                 <input type="text" placeholder="Enter Email" name="email" required>
-        
+
                 <label for="descripcion"><b>Describa brevemente el trabajo que realiza su ONG</b></label>
-                <textarea  name="descripcion" required style="width: 100%; height: 200px; margin-top: 15px; margin-bottom: 15px;"></textarea>
-        
+                <textarea name="descripcion" required
+                    style="width: 100%; height: 200px; margin-top: 15px; margin-bottom: 15px;"></textarea>
+
                 <label for="image"><b>Puede añadir una imagen que represente su ONG</b></label>
-                <input type="image" name="image" style="width: 100%; height: 200px; margin-top: 15px; margin-bottom: 15px;">
-        
+                <input type="image" name="image"
+                    style="width: 100%; height: 200px; margin-top: 15px; margin-bottom: 15px;">
+
                 <div action="" class="dates-person">
-                  <h1 style="margin-bottom: 8px;">Datos de la persona que ingresa la ONG</h1>
-                  <label for="name" ><b>Nombre y Apellidos</b></label>
-                  <input type="text" name="name" required>
-                  <label for="email-person"><b>Correo Electrónico</b></label>
-                  <input type="text" name="email-person" required>
-                  <label for="phone-number"><b>Número de Contacto</b></label>
-                  <input type="text" name="phone-number" required>
+                    <h1 style="margin-bottom: 8px;">Datos de la persona que ingresa la ONG</h1>
+                    <label for="name"><b>Nombre y Apellidos</b></label>
+                    <input type="text" name="name" required>
+                    <label for="email-person"><b>Correo Electrónico</b></label>
+                    <input type="text" name="email-person" required>
+                    <label for="phone-number"><b>Número de Contacto</b></label>
+                    <input type="text" name="phone-number" required>
                 </div>
-        
-                <p>Al crear una cuenta, acepta nuestros<a href="#" style="color:dodgerblue">Terminos y Privacidad</a>.</p>
-          
+
+                <p>Al crear una cuenta, acepta nuestros<a href="#" style="color:dodgerblue">Terminos y Privacidad</a>.
+                </p>
+
                 <div class="clearfix">
-                  <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancelar</button>
-                  <button type="submit" class="signup">Ingresar ONG</button>
+                    <button type="button" onclick="document.getElementById('id01').style.display='none'"
+                        class="cancelbtn">Cancelar</button>
+                    <button type="submit" class="signup">Ingresar ONG</button>
                 </div>
-              </div>
-            
-            </form>
-            <script src="/static/js/scripts.js"></script>
-            <script src="https://kit.fontawesome.com/b9132d8f3b.js" crossorigin="anonymous"></script>
-    
-    {% block scripts %}{% endblock %}
+            </div>
+
+        </form>
+        <script src="/static/js/scripts.js"></script>
+        <script src="https://kit.fontawesome.com/b9132d8f3b.js" crossorigin="anonymous"></script>
+
+        {% block scripts %}{% endblock %}
 </body>
+
 </html>
