--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -72,7 +72,6 @@
   <section id="cat" class="categories">
     <h2>Categorías</h2>
 
-
     <div class="row">
       <div class="column">
         <div class="card">
@@ -92,7 +91,7 @@
           <div class="card-h3">
             <h3>Violencia de Género</h3>
           </div>
-          <button class="button">Click Aquí</button>
+          <button class="button" ><a href="">Click Aquí</a></button>
         </div>
       </div>
 
