add styles to link for nav admin

--- a/web/templates/admin/layout.html
+++ b/web/templates/admin/layout.html
@@ -15,11 +15,23 @@
             height: 100px;
             width: 100%;
             border: 1px solid gray;
+            padding: 40px;
         }
 
         main{
             padding: 20px 40px;
         }
+
+    a{
+    border: 1px solid;
+    margin: 20px;
+    padding: 20px;
+    background-color: #0057b4;
+    border-radius: 5px;
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+    }
     </style>
 </head>
 <body>
