--- a/web/templates/admin/new_ongs.html
+++ b/web/templates/admin/new_ongs.html
@@ -6,16 +6,15 @@
 
 {% block content%}
 <form class="" action="/admin/ongs/save" method="post">
-    <h1>Datos a llenar de la ONG que desea ingresar </h1>
-    <p>Por favor debe ingresar estos datos par ingresar su ONG</p>
+    <h1>Datos a llenar de la ONG a ingresar </h1>
     <hr>
 
     <label for="name"><b>Nombre de la ONG</b></label>
     <input type="text" placeholder="Nombre de la ONG" name="name" required>
 
-    <label for="descripcion"><b>Describa brevemente el trabajo que realiza su ONG</b></label>
+    <label for="descripcion"><b>Descripción de la ONG</b></label>
     <textarea name="description" required
-        style="width: 100%; height: 200px; margin-top: 15px; margin-bottom: 15px;"></textarea>
+        style="width: 100%; height: 200px; margin-top: 15px; margin-bottom: 15px; padding: 10px;"></textarea>
 
     <div class="clearfix">
         <button type="button" class="cancelbtn">Cancelar</button>
