--- a/web/templates/admin/layout.html
+++ b/web/templates/admin/layout.html
@@ -42,6 +42,8 @@
     <main>
         {% block content %}{% endblock %}
     </main>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
