--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -93,7 +93,7 @@
           <div class="card-h3">
             <h3>Violencia de Género</h3>
           </div>
-          <button class="button" ><a href="">Click Aquí</a></button>
+          <button class="button" >Click Aquí</button>
         </div>
       </div>
 
