--- a/web/templates/auth/login.html
+++ b/web/templates/auth/login.html
@@ -9,7 +9,7 @@
     <title>Loguin</title>
 </head>
 <body>
-    <form>
+    <form action="/auth/login" method="post">
         <div class="imgcontainer">
           <img src="/static/img/image.png" alt="Avatar" class="avatar">
         </div>
