add changes to funtion create ong, and create category

--- a/web/templates/admin/layout.html
+++ b/web/templates/admin/layout.html
@@ -40,6 +40,7 @@
            
             <a href="/admin/ongs">Ver todas las ONG</a>
             <a href="/admin/ongs/new">Añadir ONG</a>
+            <a href="/admin/categories/new">Añadir Categoría</a>
             <form action="/auth/logout" method="post"><button>Salir</button> </form>
             <div>
                 Bienvenido: {{ name }}
