--- a/web/templates/admin/new_ongs.html
+++ b/web/templates/admin/new_ongs.html
@@ -12,9 +12,23 @@
     <label for="name"><b>Nombre de la ONG</b></label>
     <input type="text" placeholder="Nombre de la ONG" name="name" required>
 
-    <label for="descripcion"><b>Descripción de la ONG</b></label>
+    <label for="description"><b>Descripción de la ONG</b></label>
     <textarea name="description" required
         style="width: 100%; height: 200px; margin-top: 15px; margin-bottom: 15px; padding: 10px;"></textarea>
+
+    <label for="contact_number"><b>Número de contacto</b></label>
+    <input type="text" placeholder="Número de contacto" name="contact_number" required>
+
+    <label for="address"><b>Dirección</b></label>
+    <input type="text" placeholder="Dirección" name="address" required>
+
+    <label for="manager_name"><b>Nombre del encargado de la ONG</b></label>
+    <input type="text" placeholder="Nombre del encargado de la ONG" name="manager_name" required>
+
+    <label for="manager_contact"><b>Número de contacto del encargado de la ONG</b></label>
+    <input type="text" placeholder="Número de contacto del encargado de la ONG" name="manager_contact" required>
+
+
 
     <div class="clearfix">
         <button type="button" class="cancelbtn">Cancelar</button>
