--- a/web/static/styles/login.css
+++ b/web/static/styles/login.css
@@ -18,6 +18,15 @@ form {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     margin: 80px 0px;
     text-align: center;
+    position: relative;
+    animation-name: example;
+    animation-duration: 3s;  
+    animation-fill-mode: both;
+  }
+
+  @keyframes example {
+    from {top: 0px; }
+    to {top: 100px; }
   }
   
   input[type=text], input[type=password] {
@@ -34,7 +43,7 @@ form {
   
   
   button {
-    background-color: #0057b4;
+    background-color: #090157;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -44,6 +53,7 @@ form {
     width: 50%;
     margin:10px auto;
     border-radius: 5px;
+    font-size: 16px;
   }
   
   
@@ -52,11 +62,6 @@ form {
   }
   
   
-  .cancelbtn {
-    width: auto;
-    padding: 10px 18px;
-    background-color:#002a58;
-  }
   
   
   .imgcontainer {
@@ -65,7 +70,7 @@ form {
   }
   
   img.avatar {
-    width: 40%;
+    width: 30%;
     border-radius: 50%;
   }
   
