render template form_home

--- a/web/templates/form_home.html
+++ b/web/templates/form_home.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="/static/styles/form.css">
+    <title>Form</title>
 </head>
 <body>
     <div id="id01" class="modal">
         <span onclick="document.getElementById('id01').style.display='none'"
             onclick="document.getElementById('id01').style.display='none'" class="close"
-            title="Close Modal">times;</span>
+            title="Close Modal">x</span>
         <form class="modal-content" action="/action_page.php">
             <div class="container-modal">
                 <h1>Datos a llenar de la ONG que desea ingresar </h1>
