--- a/web/static/styles/login.css
+++ b/web/static/styles/login.css
@@ -4,32 +4,29 @@
     margin: 0;
     padding: 0;
 }
+
+
 body{
+    height: 100vh;
+    width: 100%;
+    background-color: #F1F3F4;
     display: flex;
     justify-content: center;
 } 
 
 
 form {
-    border: 1px solid black;
     border-radius: 10px;
     background-color: ghostwhite;
     width: 450px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    margin: 80px 0px;
+    margin:162px 0px;
     text-align: center;
     position: relative;
-    animation-name: example;
-    animation-duration: 3s;  
-    animation-fill-mode: both;
+    height: 425px;
   }
 
-  @keyframes example {
-    from {top: 0px; }
-    to {top: 100px; }
-  }
-  
-  input[type=text], input[type=password] {
+ input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 15px;
     margin: 8px 0;
@@ -50,7 +47,7 @@ form {
     border: none;
     cursor: pointer;
     display: block;
-    width: 50%;
+    width: 45%;
     margin:10px auto;
     border-radius: 5px;
     font-size: 16px;
@@ -70,8 +67,8 @@ form {
   }
   
   img.avatar {
-    width: 30%;
-    border-radius: 50%;
+    width: 130px;
+    height: 100px;
   }
   
   .container {
