--- a/web/templates/auth/login.html
+++ b/web/templates/auth/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/styles/login.css">
-    <title>Loguin</title>
+    <title>Login</title>
 </head>
 <body>
     <form action="/auth/login" method="post">
