--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -38,7 +38,7 @@
 
                     </div>
                     <a href="#cnt" class="menu_item">Contacto</a>
-                    <a class="menu_item" onclick="document.getElementById('id01').style.display='block'">Introduce tu
+                    <a class="menu_item" href="/admin/ongs/form">Introduce tu
                         ONG</a>
                 </div>
         </nav>
