add style to answer form

--- a/web/templates/form_answer.html
+++ b/web/templates/form_answer.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Answer</title>
+
+
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            width: 100%;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid black;
+            border-radius: 5px;
+            text-align: center;
+            padding: 10px;
+            width: 370px;
+            height: 200px;
+            font-size: 20px;
+            line-height: 2;
+            font-weight: bolder;
+        }
+
+        .ancle {
+            background-color: #090157;
+            padding: 9px;
+            border-radius: 5px;
+            text-decoration: none;
+            margin-bottom: 10px;
+            width: 45%;
+
+        }
+
+        a {
+            color: white;
+            font-size: 18px;
+            text-decoration: none;
+        }
+
+    </style>
+
 </head>
+
 <body>
-    form
+    <form action="">
+        <div>
+            <p>Su ONG ha sido intoducida correctamente, nos pondremos
+                en contacto con usted para corroborar los datos</p>
+        </div>
+        <div class="ancle"><a href="/ong/form/close">Close</a></div>
+    </form>
 </body>
+
 </html>
