--- a/web/templates/form_home.html
+++ b/web/templates/form_home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/static/styles/form.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Form</title>
 </head>
 <body>
@@ -50,9 +51,8 @@
                 </p>
 
                 <div class="clearfix">
-                    <button type="button" onclick="document.getElementById('id01').style.display='none'"
-                        class="cancelbtn">Cancelar</button>
-                    <button type="submit" class="signup">Ingresar ONG</button>
+                    <div class="btn"><a href="/">Cancelar</a></div>
+                    <div class="btn"><a href="/ong/form/answer">Ingresar ONG</a></div>
                 </div>
             </div>
 
