--- a/web/static/styles/form.css
+++ b/web/static/styles/form.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 
@@ -37,11 +38,27 @@ button:hover {
 }
 
 
-.cancelbtn {
-  padding: 14px 20px;
-  background-color:#0057b4 ;
+.btn{
+  background-color: #0057b4;
+  width: 45%;
+  text-align: center;
+  padding: 10px;
+  font-weight: bolder;
+  border-radius: 5px
 }
 
+.btn a {
+  text-decoration: none;
+  font-size: 18px;
+  color: #f1f1f1;
+}
+
+.clearfix{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .cancelbtn, .signupbtn {
   width: 40%;
@@ -123,3 +140,5 @@ hr {
     width: 100%;
   }
 }
+
+
