--- a/web/templates/form_home.html
+++ b/web/templates/form_home.html
@@ -28,14 +28,14 @@
                 <textarea name="description" required
                     style="width: 100%; height: 200px; margin-top: 15px; margin-bottom: 15px;"></textarea>
 
-                <label for="contact-number"><b>Introduzca un número de contacto</b></label>
-                <input type="text" placeholder="Numero de contacto" name="contact-number" required>
+                <label for="contact_number"><b>Introduzca un número de contacto</b></label>
+                <input type="text" placeholder="Numero de contacto" name="contact_number" required>
                 
                 <label for="address"><b>Introduzca la dirección de la ONG</b></label>
                 <input type="text" placeholder="Dirección" name="address" required>
                 
 
-                <!-- <label for="email"><b>Correo Electrónico</b></label>
+                <label for="email"><b>Correo Electrónico</b></label>
                 <input type="text" placeholder="Enter Email" name="email" required> -->
 
 
@@ -52,7 +52,7 @@
 
                 <div class="clearfix">
                     <div class="btn"><a href="/">Cancelar</a></div>
-                    <div class="btn"><a href="/ong/form/answer">Ingresar ONG</a></div>
+                    <button  class="btn" type="submit">Ingresa tu ONG</button>
                 </div>
             </div>
 
