--- a/web/templates/admin/new_ongs.html
+++ b/web/templates/admin/new_ongs.html
@@ -5,34 +5,34 @@
 {% endblock %}
 
 {% block content%}
-<form class="" action="/admin/ongs/save" method="post">
+<form class="" action="{{action}}" method="post">
     <h1>Datos a llenar de la ONG a ingresar </h1>
     <hr>
 
     <label for="name"><b>Nombre de la ONG</b></label>
-    <input type="text" placeholder="Nombre de la ONG" name="name" required>
+    <input type="text" placeholder="Nombre de la ONG" name="name" value="{{ong['name']}}" required>
 
     <label for="description"><b>Descripción de la ONG</b></label>
     <textarea name="description" required
-        style="width: 100%; height: 200px; margin-top: 15px; margin-bottom: 15px; padding: 10px;"></textarea>
+        style="width: 100%; height: 200px; margin-top: 15px; margin-bottom: 15px; padding: 10px;">{{ong['description']}}</textarea>
 
     <label for="contact_number"><b>Número de contacto</b></label>
-    <input type="text" placeholder="Número de contacto" name="contact_number" required>
+    <input type="text" placeholder="Número de contacto" name="contact_number" value="{{ong['contact_number']}}"   required>
 
     <label for="address"><b>Dirección</b></label>
-    <input type="text" placeholder="Dirección" name="address" required>
+    <input type="text" placeholder="Dirección" name="address" value="{{ong['address']}}" required>
 
     <label for="manager_name"><b>Nombre del encargado de la ONG</b></label>
-    <input type="text" placeholder="Nombre del encargado de la ONG" name="manager_name" required>
+    <input type="text" placeholder="Nombre del encargado de la ONG" name="manager_name"  value="{{ong['manager_name']}}" required>
 
     <label for="manager_contact"><b>Número de contacto del encargado de la ONG</b></label>
-    <input type="text" placeholder="Número de contacto del encargado de la ONG" name="manager_contact" required>
+    <input type="text" placeholder="Número de contacto del encargado de la ONG" name="manager_contact" value="{{ong['manager_contact']}}" required>
 
 
 
     <div class="clearfix">
         <button type="button" class="cancelbtn">Cancelar</button>
-        <button type="submit" class="signup">Crear</button>
+        <button type="submit" class="signup">Salvar</button>
     </div>
 </form>
 {% endblock %}
